[package]
name = "ipset"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
ipnetwork = "0.18.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false
